testsuite/tests/polykinds/T16244.stderr

T16244.hs:13:18: error: [GHC-25897]
    • Expected kind ‘k1’, but ‘b’ has kind ‘k2’
      ‘k2’ is a rigid type variable bound by
        the class declaration for ‘C’
        at T16244.hs:13:26
      ‘k1’ is a rigid type variable bound by
        the class declaration for ‘C’
        at T16244.hs:13:1-52
    • In the second argument of ‘SameKind’, namely ‘b’
      In the class declaration for ‘C’
